Añadiendo secciones y estructurando contenido

--- a/index.html
+++ b/index.html
@@ -20,5 +20,41 @@
             <a href="#contacto">Contacto</a>
         </nav>
     </header>
+
+    <section class="hero">
+        <h1 class="titulo">
+            Avalúos Profesionales....
+        </h1>
+    </section>
+
+    <article class="servicios" id="servicios">
+        <h2 class="titulo">
+            Servicios profesionales
+        </h2>
+        <ul class="oferta">
+            <li class="item">✔ Avalúos Comerciales</li>
+            <li class="item">✔ Avalúos Corporativos</li>
+            <li class="item">✔ Avalúos Administrativos</li>
+        </ul>
+        <figure class="casa-ilustra">
+            <img src="" alt="casa ilustración" class="casa-ilustra">
+        </figure>
+    </article>
+
+    <section class="academica" id="formacion">
+        <h2 class="titulo">
+            Formación académica
+        </h2>
+        <ul class="estudios">
+            <li class="capacitacion">lorem ipsum</li>
+            <li class="capacitacion">lorem ipsum</li>
+            <li class="capacitacion">lorem ipsum</li>
+            <li class="capacitacion">lorem ipsum</li>
+        </ul>
+    </section>
+
+    <section class="experiencia">
+        
+    </section>
 </body>
 </html>
