Nuevos estilos en el header, el título principal y los servicios profesionales

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
     <title>Guillermo Carvajal</title>
 </head>
 <body>
@@ -21,24 +23,27 @@
         </nav>
     </header>
 
+    <!-- Principal -->
     <section class="hero">
         <h1 class="titulo">
-            Avalúos Profesionales....
+            <span class="resaltado">Avalúos</span><br/><span class="resaltado"> Profesionales</span>
         </h1>
     </section>
 
     <article class="servicios" id="servicios">
-        <h2 class="titulo">
-            Servicios profesionales
-        </h2>
-        <ul class="oferta">
-            <li class="item">✔ Avalúos Comerciales</li>
-            <li class="item">✔ Avalúos Corporativos</li>
-            <li class="item">✔ Avalúos Administrativos</li>
-        </ul>
-        <figure class="casa-ilustra">
-            <img src="" alt="casa ilustración" class="casa-ilustra">
-        </figure>
+        <div class="container">
+            <h2 class="titulo">
+                Servicios profesionales
+            </h2>
+            <ul class="oferta">
+                <li class="item">✔ Avalúos Comerciales</li>
+                <li class="item">✔ Avalúos Corporativos</li>
+                <li class="item">✔ Avalúos Administrativos</li>
+            </ul>
+            <figure class="casa-ilustra">
+                <img src="" alt="casa ilustración" class="casa-ilustra">
+            </figure>
+        </div>
     </article>
 
     <section class="academica" id="formacion">
@@ -54,7 +59,15 @@
     </section>
 
     <section class="experiencia">
-        
+        <h2 class="titulo">
+            Experiencia
+        </h2>
+    </section>
+
+    <section class="contacto">
+        <h2 class="titulo">
+            Contacto
+        </h2>
     </section>
 </body>
 </html>
