--- a/index.html
+++ b/index.html
@@ -47,27 +47,33 @@
     </article>
 
     <section class="academica" id="formacion">
-        <h2 class="titulo">
-            Formación académica
-        </h2>
-        <ul class="estudios">
-            <li class="capacitacion">lorem ipsum</li>
-            <li class="capacitacion">lorem ipsum</li>
-            <li class="capacitacion">lorem ipsum</li>
-            <li class="capacitacion">lorem ipsum</li>
-        </ul>
+        <div class="container">
+            <h2 class="titulo">
+                Formación académica
+            </h2>
+            <ul class="estudios">
+                <li class="capacitacion">lorem ipsum</li>
+                <li class="capacitacion">lorem ipsum</li>
+                <li class="capacitacion">lorem ipsum</li>
+                <li class="capacitacion">lorem ipsum</li>
+            </ul>
+        </div>
     </section>
 
     <section class="experiencia">
-        <h2 class="titulo">
-            Experiencia
-        </h2>
+        <div class="container">
+            <h2 class="titulo">
+                Experiencia
+            </h2>
+        </div>
     </section>
-
+    
     <section class="contacto">
-        <h2 class="titulo">
-            Contacto
-        </h2>
+        <div class="container">
+            <h2 class="titulo">
+                Contacto
+            </h2>
+        </div>
     </section>
 </body>
 </html>
