primer cambio pequeño en la cabecera

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </figure>
 
         <nav class="menu">
-            <a href="#servicios">Servicios Profesionales</a>
-            <a href="#formacion">Formación académica</a>
-            <a href="#experiencia">Experiencia</a>
-            <a href="#contacto">Contacto</a>
+            <a class="menu__a" href="#servicios">Servicios Profesionales</a>
+            <a class="menu__a href="#formacion">Formación académica</a>
+            <a class="menu__a href="#experiencia">Experiencia</a>
+            <a class="menu__a href="#contacto">Contacto</a>
         </nav>
     </header>
 
