--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
         <nav class="menu">
             <a class="menu__a" href="#servicios">Servicios Profesionales</a>
-            <a class="menu__a href="#formacion">Formación académica</a>
-            <a class="menu__a href="#experiencia">Experiencia</a>
-            <a class="menu__a href="#contacto">Contacto</a>
+            <a class="menu__a" href="#formacion">Formación académica</a>
+            <a class="menu__a" href="#experiencia">Experiencia</a>
+            <a class="menu__a" href="#contacto">Contacto</a>
         </nav>
     </header>
 
