Mejora en el fondo principal y añadí estilos a la sección servicios y otros

--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
             Servicios profesionales
         </h2>
         <div class="container servicios__container">
-            <ul class="oferta">
+            <ul class="servicios__oferta">
                 <li class="item">✔ Avalúos Comerciales</li>
                 <li class="item">✔ Avalúos Corporativos</li>
                 <li class="item">✔ Avalúos Administrativos</li>
             </ul>
             <figure class="servicios__house">
-                <img src="img/house-ilu.png" alt="casa ilustración" class="servicios__house__img">
+                <img src="img/corpoaval.jpg" alt="casa ilustración" class="servicios__house__img">
             </figure>
         </div>
     </article>
 
     <section class="academica" id="formacion">
-        <h2 class="titulo">
+        <h2 class="titulo academica__titulo">
             Formación académica
         </h2>
         <div class="container">
