Cambios en la fuente, utilizo Open Sans, Playfair Display y Lato. Mejoro la sección de Formación académica

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&family=Open+Sans&family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
     <title>Guillermo Carvajal</title>
 </head>
 <body>
@@ -50,16 +50,21 @@
         </div>
     </article>
 
+    <!-- Estudios -->
     <section class="academica" id="formacion">
-        <h2 class="titulo academica__titulo">
-            Formación académica
-        </h2>
-        <div class="container">
-            <ul class="estudios">
-                <li class="capacitacion">lorem ipsum</li>
-                <li class="capacitacion">lorem ipsum</li>
-                <li class="capacitacion">lorem ipsum</li>
-                <li class="capacitacion">lorem ipsum</li>
+        <div class="academica__container container">
+            <h2 class="titulo academica__titulo">
+                Formación <br/>Académica
+            </h2>
+            <ul class="academica__estudios">
+                <li class="academica__estudios__li">Técnico en avaluos de bienes muebles e inmuebles Urbanos – Rurales y Especiales.</li>
+                <li class="academica__estudios__li">Diplomado Fundamentos básicos en Avalúos de Bienes Muebles e Inmuebles.</li>
+                <li class="academica__estudios__li">Seminario Teórico – Práctico en Finca Raíz y Avalúos</li>
+                <li class="academica__estudios__li">Aplicación de herramientas informáticas para avalúos urbanos y rurales.</li>
+                <li class="academica__estudios__li">Diplomado en Informática y Sistemas de Información</li>
+                <li class="academica__estudios__li">Participación en talleres de valoración de cultivos</li>
+                <li class="academica__estudios__li">Diplomado valoración agraria</li>
+                <li class="academica__estudios__li">Diplomado actualización métodos valuatorios</li>
             </ul>
         </div>
     </section>
