Contenido y estilos sección experiencia

--- a/index.html
+++ b/index.html
@@ -69,15 +69,25 @@
         </div>
     </section>
 
-    <section class="experiencia">
-        <h2 class="titulo">
-            Experiencia
-        </h2>
+    <section class="experiencia" id="experiencia">
+    <h2 class="titulo">
+        Experiencia
+    </h2>
         <div class="container">
+            <ul class="experiencia__lista">
+                <li class="experiencia__item item">Realización de Avalúos comerciales en diferentes Municipios de la Geografía Nacional.</li>
+                <li class="experiencia__item item">Desarrollo de los avalúos acorde a la normatividad legal Vigente.</li>
+                <li class="experiencia__item item">Certificado (R.A.A.) Registro Abierto Avaluador Nivel Nacional.</li>
+                <li class="experiencia__item item">Persona natural que posee una formación ideal y reconocida por el Registro Nacional de Avaluadores, lo cual dará un respaldo a la actividad Valuatoria, garantizando que el desarrollo de las labores realizadas cumple con los estándares y normatividad vigente.</li>
+                <li class="experiencia__item item">Comprometido con el cumplimiento de la Ética, manteniendo estudio y capacitación constante a fin de brindar un servicio de alta calidad.</li>
+                <li class="experiencia__item item">Capacidad de asesor, controlar y ejecutar todo tipo de avalúos para diferentes entidades tanto del estado como particulares.</li>
+                <li class="experiencia__item item">Avaluador en procesos valuatorios para proyectos de generación eléctrica y acueductos.</li>
+                <li class="experiencia__item item">Auxiliar de Justicia en diferentes procesos.</li>
+            </ul>
         </div>
     </section>
     
-    <section class="contacto">
+    <section class="contacto" id="contacto">
         <div class="container">
             <h2 class="titulo">
                 Contacto
