Cambio de experiencia por perfil profesional, cambios en el texto de formación académica. Nueva imágen en Perfil Profesional

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="menu">
                 <a class="menu__a" href="#servicios">Servicios Profesionales</a>
                 <a class="menu__a" href="#formacion">Formación académica</a>
-                <a class="menu__a" href="#experiencia">Experiencia</a>
+                <a class="menu__a" href="#Perfil__Profesional">Perfil Profesional</a>
                 <a class="menu__a" href="#contacto">Contacto</a>
             </nav>
         </header>
@@ -43,6 +43,7 @@
                 <li class="item">✔ Avalúos Comerciales</li>
                 <li class="item">✔ Avalúos Corporativos</li>
                 <li class="item">✔ Avalúos Administrativos</li>
+                <li class="item">✔ Peritajes</li>
             </ul>
             <figure class="servicios__house">
                 <img src="img/corpoaval.jpg" alt="casa ilustración" class="servicios__house__img">
@@ -69,27 +70,29 @@
         </div>
     </section>
 
-    <section class="experiencia" id="experiencia">
-    <h2 class="titulo">
-        Experiencia
-    </h2>
+    <section class="perfil" id="Perfil__Profesional">
         <div class="container">
-            <ul class="experiencia__lista">
-                <li class="experiencia__item item">Realización de Avalúos comerciales en diferentes Municipios de la Geografía Nacional.</li>
-                <li class="experiencia__item item">Desarrollo de los avalúos acorde a la normatividad legal Vigente.</li>
-                <li class="experiencia__item item">Certificado (R.A.A.) Registro Abierto Avaluador Nivel Nacional.</li>
-                <li class="experiencia__item item">Persona natural que posee una formación ideal y reconocida por el Registro Nacional de Avaluadores, lo cual dará un respaldo a la actividad Valuatoria, garantizando que el desarrollo de las labores realizadas cumple con los estándares y normatividad vigente.</li>
-                <li class="experiencia__item item">Comprometido con el cumplimiento de la Ética, manteniendo estudio y capacitación constante a fin de brindar un servicio de alta calidad.</li>
-                <li class="experiencia__item item">Capacidad de asesor, controlar y ejecutar todo tipo de avalúos para diferentes entidades tanto del estado como particulares.</li>
-                <li class="experiencia__item item">Avaluador en procesos valuatorios para proyectos de generación eléctrica y acueductos.</li>
-                <li class="experiencia__item item">Auxiliar de Justicia en diferentes procesos.</li>
+        <h2 class="perfil__titulo titulo">
+            Perfil Profesional
+        </h2>
+            <figure class="perfil__img">
+                <img class="perfil__img" src="img/empire-state.png" alt="imagen">
+            </figure>
+            <ul class="perfil__lista">
+                <li class="perfil__item item">Persona natural que posee una formación ideal y reconocida por el Registro Nacional de Avaluadores, (R.A.A.) lo cual dará un respaldo a la actividad Valuatoria, garantizando que el desarrollo de las labores realizadas cumple con los estándares y normatividad vigente.</li>
+                <li class="perfil__item item">Realización de Avalúos comerciales, corporativos y peritajes en diferentes Municipios de la Geografía Nacional.</li>
+                <li class="perfil__item item">Desarrollo de los avalúos acorde a la normatividad legal Vigente.</li>
+                <li class="perfil__item item">Comprometido con el cumplimiento de la Ética, manteniendo estudio y capacitación constante a fin de brindar un servicio de alta calidad.</li>
+                <li class="perfil__item item">Capacidad de asesorar, controlar y ejecutar todo tipo de avalúos para diferentes entidades tanto del estado como particulares.</li>
+                <li class="perfil__item item">Avaluador en procesos valuatorios para proyectos de generación eléctrica y acueductos.</li>
+                <li class="perfil__item item">Auxiliar de Justicia en diferentes procesos.</li>
             </ul>
         </div>
     </section>
     
     <section class="contacto" id="contacto">
         <div class="container">
-            <h2 class="titulo">
+            <h2 class="contacto__titulo titulo">
                 Contacto
             </h2>
         </div>
