Reducción en el código de los títulos y en clases

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
     <!-- Servicios Profesionales -->
     <article class="servicios" id="servicios">
-        <h2 class="titulo">
-            Servicios profesionales
-        </h2>
         <div class="container servicios__container">
+            <h2 class="titulo">
+                Servicios profesionales
+            </h2>
             <ul class="servicios__oferta">
                 <li class="item">✔ Avalúos Comerciales</li>
                 <li class="item">✔ Avalúos Corporativos</li>
@@ -54,7 +54,7 @@
     <!-- Estudios -->
     <section class="academica" id="formacion">
         <div class="academica__container container">
-            <h2 class="titulo academica__titulo">
+            <h2 class="academica__titulo titulo">
                 Formación <br/>Académica
             </h2>
             <ul class="academica__estudios">
@@ -72,7 +72,7 @@
 
     <section class="perfil" id="Perfil__Profesional">
         <div class="container">
-        <h2 class="perfil__titulo titulo">
+        <h2 class="titulo">
             Perfil Profesional
         </h2>
             <figure class="perfil__img">
@@ -92,7 +92,7 @@
     
     <section class="contacto" id="contacto">
         <div class="container">
-            <h2 class="contacto__titulo titulo">
+            <h2 class="titulo">
                 Contacto
             </h2>
         </div>
