Imágenes sección de contacto

--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
             <h2 class="titulo">
                 Contacto
             </h2>
+            <a href="" class="whatsapp link">+57 3138304955</a>
+            <a href="" class="facebook link"></a>
+            <a href="" class="link"></a>
         </div>
     </section>
 </body>
