Responsive desing hasta 768 y nuevo botón para el menú desplegable

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&family=Open+Sans&family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="fonts/font-awesome.min.css">
     <title>Guillermo Carvajal</title>
 </head>
 <body>
@@ -12,6 +13,9 @@
     <div class="header-principal">
         <!-- Encabezado -->
         <header class="encabezado">
+            <div class="boton-menu" id="botoncito">
+                <i class="fa fa-bars boton" aria-hidden="true"></i>
+            </div>
             <figure class="logo">
                 <img src="" alt="Logo">
             </figure>
@@ -23,7 +27,6 @@
                 <a class="menu__a" href="#contacto">Contacto</a>
             </nav>
         </header>
-        <hr/>
         
         <!-- Principal -->
         <section class="hero">
