Añadiendo JavaScript y el menú desplegable y sus respectivos estilos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <img src="" alt="Logo">
             </figure>
             
-            <nav class="menu">
+            <nav class="menu" id="menu">
                 <a class="menu__a" href="#servicios">Servicios Profesionales</a>
                 <a class="menu__a" href="#formacion">Formación académica</a>
                 <a class="menu__a" href="#Perfil__Profesional">Perfil Profesional</a>
@@ -103,5 +103,7 @@
             <a href="" class="link"></a>
         </div>
     </section>
+
+    <script src="js/menu.js"></script>
 </body>
 </html>
