Terminando el Responsive design con cambios en el menu desplegable y dispositivos de hasta 320px

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <li class="item">✔ Avalúos Administrativos</li>
                 <li class="item">✔ Peritajes</li>
             </ul>
-            <figure class="servicios__house">
-                <img src="img/corpoaval.jpg" alt="casa ilustración" class="servicios__house__img">
+            <figure class="servicios__corpoaval">
+                <img src="img/corpoaval.jpg" alt="casa ilustración" class="servicios__corpoaval__img">
             </figure>
         </div>
     </article>
