Cambio en la dirección de las imágenes

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li class="item">✔ Peritajes</li>
             </ul>
             <figure class="servicios__corpoaval">
-                <img src="img/corpoaval.jpg" alt="casa ilustración" class="servicios__corpoaval__img">
+                <img src="https://i.imgur.com/QmV5pH9.jpg" alt="casa ilustración" class="servicios__corpoaval__img">
             </figure>
         </div>
     </article>
@@ -79,7 +79,7 @@
             Perfil Profesional
         </h2>
             <figure class="perfil__img">
-                <img class="perfil__img" src="img/empire-state.png" alt="imagen">
+                <img class="perfil__img" src="https://i.imgur.com/r0NsaVY.png" alt="imagen">
             </figure>
             <ul class="perfil__lista">
                 <li class="perfil__item item">Persona natural que posee una formación ideal y reconocida por el Registro Nacional de Avaluadores, (R.A.A.) lo cual dará un respaldo a la actividad Valuatoria, garantizando que el desarrollo de las labores realizadas cumple con los estándares y normatividad vigente.</li>
