Añadí el nombre de Guillermo Carvajal y sus estilos

--- a/index.html
+++ b/index.html
@@ -30,9 +30,14 @@
         
         <!-- Principal -->
         <section class="hero">
-            <h1 class="hero__titulo">
-                Profesional en Avalúos
-            </h1>
+            <div class="hero__container container">
+                <h2 class="nombre">
+                    Guillermo Carvajal
+                </h2>
+                <h1 class="hero__titulo">
+                    Profesional en Avalúos
+                </h1>
+            </div>
         </section>
     </div>
 
@@ -98,9 +103,8 @@
             <h2 class="titulo">
                 Contacto
             </h2>
-            <a href="" class="whatsapp link">+57 3138304955</a>
-            <a href="" class="facebook link"></a>
-            <a href="" class="link"></a>
+            <a href="https://wa.link/cy82ln" class="whatsapp link">+57 3138304955</a>
+            <a href="https://www.facebook.com/guillermo.carvi/" class="facebook link">Guillermo Carvajal</a>
         </div>
     </section>
 
