--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <i class="fa fa-bars boton" aria-hidden="true"></i>
             </div>
             <figure class="logo">
-                <img src="" alt="Logo">
+                <img src="https://i.imgur.com/06b0a75.jpg" alt="Logo">
             </figure>
             
             <nav class="menu" id="menu">
